--- a/style/style.css
+++ b/style/style.css
@@ -15,27 +15,32 @@
   /* common class */
   *{
     font-family: "Josefin Sans";
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    /* box-sizing: border-box; */
   }
   .body{
-    font-size: 16px;
-    overflow-x: hidden;
+    /* border: 2px solid red; */
+    max-width: 100vw;
+    min-height: 100vh;
+    
+    /* overflow-x: hidden; */
     background-color: black;
   }
   /* Header section */
   .header{
     /* border: 3px dotted blue; */
-    height: 714px;
+    max-height: 90vh;
     background: linear-gradient(to bottom, rgba(17, 17, 17, 1),rgba(119, 119, 119, 0))
   }
   /* navigation */
 
   .navigation{
+    width: 80vw;
     display: flex;
     justify-content: space-between;
-    margin: 0px 120px;
+    margin: 0 auto;
     align-items: center;
     padding-top: 57px;
     /* background-color: transparent; */
@@ -67,20 +72,28 @@
     background-color: rgba(230, 83, 60, 1);
     border-radius: 46px;
   }
+  #menu_icon{
+    display: none;
+  }
 /* banner section */
-.banner, .description, .des_title, .des_subtitle, .banner_img, .banner_img_container{
+/* .banner, .description, .des_title, .des_subtitle, .banner_img, .banner_img_container{
   background-color: transparent;
-
-}
+} */
 .banner{
+  width: 80vw;
+  height: 75vh;
   display: flex;
   justify-content: space-between;
+  /* border: 2px solid green; */
+  margin: 0px auto;
+  margin-top: 2%;
+
 }
 .description{
-    width: 599px;
+    /* width: 30%; */
     /* border: 2px solid red; */
     color: white;
-    margin: 96px 120px;
+    margin: auto 0px;
 
 }
 .des_title{
@@ -116,9 +129,19 @@
     background-color: black;
     border: 1px solid ;
 }
+.banner_img_tags_container{
+  display: flex;
+  flex-direction: column;
+  
+}
 .banner_img{
-  margin-top: 32px;
-  padding-right: 114px;
+  /* border: 3px dotted yellowgreen; */
+  /* margin-top: 32px; */
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  /* padding-right:140px; */
   
 }
 
@@ -130,7 +153,7 @@
 }
 .tute{
   /* border: 2px solid red; */
-  width: 206px;
+  width: 50%;
   height: 96px;
   display: flex;
   align-items: center;
@@ -138,13 +161,50 @@
   justify-content: space-evenly;
   position: relative;
   top: -120px;
-  left: -60px;
-  background-color: transparent;
-  background
+  right:35px;
+  background-color: rgba(48, 48, 48, 0.54);
+  color: white;
+  backdrop-filter: blur(5px);
+  /* filter: blur(5px); */
+  /* background-color: transparent; */
+  border-radius: 12px;
+}
+.workout_video{
+  width: 50%;
+  height: 98px;
+  color: white;
+  background-color: rgba(48, 48, 48, 0.54);
+  position: relative;
+  top: -40.81rem;
+  right: -15.625rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+  backdrop-filter:blur(5px);
+
+  
+}
+#big{
+  font-size: 40px;
 }
 
-.content{
-  color: white;
-  background-color: transparent;
-}
 /* responsive part */
+@media screen and (max-width:576px) {
+  *{
+    font-size: 14px;
+  }
+  .banner{
+    margin-top: 4%;
+  }
+  .nav_item{
+    display: none;
+  }
+  #menu_icon{
+    display:block;
+  }
+  .banner{
+    flex-direction: column;
+  }
+}
