--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@
   /* Header section */
   .header{
     /* border: 3px dotted blue; */
-    max-height: 90vh;
+    height: 90vh;
     background: linear-gradient(to bottom, rgba(17, 17, 17, 1),rgba(119, 119, 119, 0))
   }
   /* navigation */
@@ -104,10 +104,13 @@
     line-height: 24px;
     letter-spacing: 0.5px;
     margin: 28px 0;
+    color: rgba(255, 255, 255, 0.5);
     
 }
 .button{
   background-color: transparent;
+  display: flex;
+  
 }
 .buttn1{
     color: white;
@@ -118,11 +121,12 @@
     font-size: 1.1125rem;
     font-weight: 600;
     margin-right: 14px;
+
     
 }
 .buttn2{
     color: white;
-    padding: 15px 40px;
+    padding:1rem 2.5rem;
     border-radius: 42px;
     font-size: 1.1125rem;
     font-weight: 600;
@@ -175,28 +179,78 @@
   color: white;
   background-color: rgba(48, 48, 48, 0.54);
   position: relative;
-  top: -40.81rem;
-  right: -15.625rem;
+  top: -35.81rem;
+  right: -11.625rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 12px;
   backdrop-filter:blur(5px);
-
-  
 }
 #big{
   font-size: 40px;
 }
+/* main part */
+/* habits section */
+.habits_section{
+  max-width: 80vw;
+  border: 2px solid red;
+  margin: 100px auto;
+  text-align: center;
+}
+.habits_description{
+  margin-bottom: 30px;
+}
+.habits_title{
+  color: white;
+  font-size:3rem;
+}
+.habits_subtitle{
+  color:rgba(255, 255, 255, 0.5) ;
+  margin: 20px;
+}
+.habits_container{
+  display: flex;
+  justify-content: space-between;
+}
+.habits{
+  max-width: 231px;
+}
+.habit_title{
+  color: white;
+  margin: 25px 0 8px 0 ;
+}
+.habit_subtitle{
+  color: rgba(255, 255, 255, 0.5);
+}
+.habits>img{
+  border-radius: 50%;
+}
 
-/* responsive part */
+/* responsive part  tablet*/
+@media screen and (min-width:576.1px) and (max-width:992px){
+  .banner{
+    flex-direction: column;
+  }
+}
+/* responsive part for mobile */
 @media screen and (max-width:576px) {
   *{
     font-size: 14px;
   }
+  /* nav bar and banner section */
+  .header{
+    height: 1024px;
+  }
   .banner{
     margin-top: 4%;
+    flex-direction: column;
+    height: 130vh;
+  }
+  .banner_img{
+    height: 80%;
+    width: 80%;
   }
   .nav_item{
     display: none;
@@ -205,6 +259,36 @@
     display:block;
   }
   .banner{
-    flex-direction: column;
+    
+  }
+  .button{
+    
+    gap: 15px;
+  }
+  .tute{
+    right:25px;
+  }
+  .workout_video{
+    top: -35.81rem;
+    right: -11.625rem;
+
+  }
+  .buttn1, .buttn2{
+    padding: .5rem 1rem;
+  }
+  .banner_img_tags_container{
+    margin-top: 30px;
+  }
+  .banner_img{
+    margin: 0 auto;
+  }
+  /* habits section */
+  .habits_container{
+    display: grid;
+    /* grid-template-columns: repeat(2 1fr); */
+    gap: 20px;
+    justify-content: center;
+
   }
 }
+
