--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
   }
   @import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap');
   .playwrite-cu{
-    font-family: "Playwrite CU", cursive;
+    font-family: "Playwrite CU", cursive, sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
   }
@@ -17,14 +17,14 @@
     font-family: "Josefin Sans";
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    
     /* box-sizing: border-box; */
   }
   .body{
     /* border: 2px solid red; */
     max-width: 100vw;
     min-height: 100vh;
-    
+    font-size: 16px;
     /* overflow-x: hidden; */
     background-color: black;
   }
@@ -76,9 +76,6 @@
     display: none;
   }
 /* banner section */
-/* .banner, .description, .des_title, .des_subtitle, .banner_img, .banner_img_container{
-  background-color: transparent;
-} */
 .banner{
   width: 80vw;
   height: 75vh;
@@ -178,7 +175,7 @@
   height: 98px;
   color: white;
   background-color: rgba(48, 48, 48, 0.54);
-  position: relative;
+  position:relative;
   top: -35.81rem;
   right: -11.625rem;
   display: flex;
@@ -188,14 +185,12 @@
   border-radius: 12px;
   backdrop-filter:blur(5px);
 }
-#big{
-  font-size: 40px;
-}
+
 /* main part */
 /* habits section */
 .habits_section{
   max-width: 80vw;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   margin: 100px auto;
   text-align: center;
 }
@@ -230,8 +225,23 @@
 
 /* responsive part  tablet*/
 @media screen and (min-width:576.1px) and (max-width:992px){
+  /* header section */
+  .header{
+    height: 160vh;
+  }
   .banner{
     flex-direction: column;
+    height: 150vh;
+  }
+  .banner_img{
+    height: 80%;
+    width: 70%;
+    margin: 0 auto;
+  }
+  /* habits section */
+  .habits_container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 /* responsive part for mobile */
@@ -257,9 +267,6 @@
   }
   #menu_icon{
     display:block;
-  }
-  .banner{
-    
   }
   .button{
     
