--- a/style/style.css
+++ b/style/style.css
@@ -268,7 +268,7 @@
  
 }
 .trainings_description{
-  width: 45%;
+  width: 100%;
   /* border: 3px dotted blue; */
   color: white;
 }
@@ -278,57 +278,90 @@
 .trainings_subtitle{
   color: rgba(255, 255, 255, 0.5);
   line-height: 24px;
+  margin: 20px 0 50px 0;
 }
 .img_div_container{
   display: grid;
-  grid-template-columns: 1fr 2fr 1.5fr;
-
+  /* grid-template-columns: 1fr 2fr 1.5fr; */
+  grid-template-columns: 16.67% 16.67% 16.67% 16.67% 16.67% 16.67%;
+  grid-template-rows: 1fr 1fr;
 }
 .img_container{
-  border: 2px solid red;
+  /* border: 2px solid red; */
   height: 25vh;
   width: 100%;
 }
- /* #img_container_1{ 
+ #img_container_1{ 
+  grid-row: 1/2;
+  grid-column: 1/2;
   background-image: url(../images/exercise1.jpg);
   background-position:center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+.img_overlay_1{
+  height: 100%;
+  background-color: rgba(6, 255, 210, 0.5);
+}
  #img_container_2{ 
+  grid-row: 1/2;
+  grid-column: 2/5;
   background-image: url(../images/exercise2.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
+}
+.img_overlay_2{
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.3);
 }
 #img_container_3{
-  background-image: url(../images/exercise3.png);
+  grid-row: 1/2;
+  grid-column: 5/7;
+  background: url(../images/exercise3.png);  
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
 }
+.img_overlay_3{
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
 #img_container_4{
+  grid-row: 2/3;
+  grid-column: 1/3;
   background-image: url(../images/exercise4.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
+}
+.img_overlay_4{
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 #img_container_5{
   background-image: url(../images/exercise5.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
+}
+.img_overlay_5{
+  height: 100%;
+  background-color: rgba(66, 255, 0, 0.3);
 }
 #img_container_6{
+  grid-row: 2/3;
+  grid-column: 4/7;
   background-image: url(../images/exercise6.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}   */
+}  
+.img_overlay_6{
+  height: 100%;
+  background-color: rgba(0, 71, 255, 0.3);
+}
 /* responsive part  tablet*/
 @media screen and (min-width:576.1px) and (max-width:992px){
   /* header section */
@@ -431,5 +464,26 @@
   .runbtn{
     padding: 10px 50px
   }
+  /* Training section */
+  #img_container_1 {
+    grid-row: 1/2;
+    grid-column: 1/4;
+  }
+  #img_container_2{
+    grid-row: 1/2;
+    grid-column: 4/7;
+  }
+  #img_container_4{
+    grid-row: 2/3;
+    grid-column: 1/4;
+  }
+  #img_container_5{
+    grid-row: 2/3;
+    grid-column: 4/7;
+  }
+  #img_container_3,#img_container_6{
+    display: none;
+  }
 }
+
 
