--- a/style/style.css
+++ b/style/style.css
@@ -152,6 +152,12 @@
   height: 40px;
   width: 40px;
   border-radius: 50%;
+  align-content: center;
+  text-align: center;
+}
+
+.play{
+  /* border: 1px solid black; */
 }
 
 .tute{
@@ -408,7 +414,7 @@
 
 .calculator_title_subtitle{
   /* border: 2px solid red; */
-  width: 35%;
+  width: 30%;
   line-height: 24px;
   margin: 50px auto;
 }
@@ -652,7 +658,6 @@ select{
   cursor: pointer;
   transition: background-color 0.3s;
 }
-
 /* Workout section */
 
 /* Footer section */
