--- a/style/style.css
+++ b/style/style.css
@@ -9,10 +9,11 @@
     font-style: normal;
   }
 
-  .playwrite-cu{
+  .play_write_cu{
     font-family: "Playwrite CU", cursive, sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    font-weight: normal;
   }
 
   /* common class */
@@ -269,6 +270,7 @@
 
 .run_subtitle{
   margin: 25px 0;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .runbtn{
@@ -282,13 +284,12 @@
   object-fit: cover;
   border-radius: 40px;
   padding: 20px;
-  /* border: 2px dotted purple; */
 }
 /* End of Run section */
 
+
 /* Trainings and Exercise section */
 .trainings_section{
-  /* border: 2px solid violet; */
   width: 80vw;
   margin: 100px auto;
 }
@@ -321,6 +322,11 @@
   width: 100%;
 }
 
+.img_div_container h1{
+  padding: 1rem;
+  color: white;
+}
+
  #img_container_1{ 
   grid-row: 1/2;
   grid-column: 1/2;
@@ -333,7 +339,7 @@
 .img_overlay_1{
   height: 100%;
   background-color: rgba(6, 255, 210, 0.5);
-  text-align: end;
+  align-content: end;
 }
 
  #img_container_2{ 
@@ -362,6 +368,7 @@
 .img_overlay_3{
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  align-content: end;
 }
 
 #img_container_4{
@@ -376,6 +383,7 @@
 .img_overlay_4{
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  align-content: end;
 }
 
 #img_container_5{
@@ -388,6 +396,7 @@
 .img_overlay_5{
   height: 100%;
   background-color: rgba(66, 255, 0, 0.3);
+  align-content: center;
 }
 
 #img_container_6{
@@ -402,6 +411,7 @@
 .img_overlay_6{
   height: 100%;
   background-color: rgba(0, 71, 255, 0.3);
+  align-content:end;
 }
 /* End of trainings and exercise section */
 
@@ -603,7 +613,7 @@ select{
 }
 /* End of meet our team section. */
 
-/* Workout section */
+
 /* Featured Workout Section */
 .featured_workout{
   width: 80vw;
@@ -619,6 +629,10 @@ select{
   font-size: 2rem;
   padding: 10px;
   color: rgba(230, 83, 60, 1);
+}
+
+.workout_description{
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .workout_container{
