--- a/style/style.css
+++ b/style/style.css
@@ -281,9 +281,11 @@
   width: 40%;
   height: 90%;
   align-content: center;
-  object-fit: cover;
+
   border-radius: 40px;
   padding: 20px;
+  object-fit: none;
+  object-position: 75% 38%;
 }
 /* End of Run section */
 
